--- a/GameJam-2/.godot/editor/editor_layout.cfg
+++ b/GameJam-2/.godot/editor/editor_layout.cfg
@@ -12,8 +12,8 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=202
-dock_hsplit_3=-202
+dock_hsplit_2=165
+dock_hsplit_3=-162
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://testing.tscn", "res://main.tscn", "res://scenes/player.tscn")
-current_scene="res://testing.tscn"
+current_scene="res://scenes/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
