--- a/GameJam-2/.godot/editor/script_editor_cache.cfg
+++ b/GameJam-2/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 80,
-"folded_lines": Array[int]([]),
+"column": 0,
+"folded_lines": Array[int]([4, 9, 17]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 1.0,
+"row": 6,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
