--- a/GameJam-2/.godot/editor/script_editor_cache.cfg
+++ b/GameJam-2/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([4, 9, 17]),
+"column": 1,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
+"row": 39,
+"scroll_position": 27.2697,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
