--- a/GameJam-2/.godot/editor/editor_layout.cfg
+++ b/GameJam-2/.godot/editor/editor_layout.cfg
@@ -13,26 +13,26 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=165
-dock_hsplit_3=-162
+dock_hsplit_3=-407
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/character/scripts/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/character/", "res://assets/character/scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Tilesets/Grassy.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tilesets/", "res://Tilesets/Sprites/", "res://assets/character/", "res://assets/character/scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://testing.tscn", "res://main.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/player.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://testing.tscn", "res://main.tscn", "res://scenes/player.tscn", "res://Tilesets/Grassy.tscn")
+current_scene="res://testing.tscn"
+center_split_offset=-405
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=4
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
