--- a/GameJam-2/.godot/editor/project_metadata.cfg
+++ b/GameJam-2/.godot/editor/project_metadata.cfg
@@ -18,6 +18,8 @@ Sprite2D:scale=true
 CollisionShape2D:scale=true
 MultiNodeEdit:scale=true
 TileMap:scale=true
+Camera2D:zoom=true
+Camera2D:scale=true
 
 [dialog_bounds]
 
