added objects to tilemap

--- a/GameJam-2/.godot/editor/editor_layout.cfg
+++ b/GameJam-2/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Tilesets/Grassy.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Tilesets/Sprites/props.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tilesets/", "res://Tilesets/Sprites/", "res://assets/character/", "res://assets/character/scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://testing.tscn", "res://main.tscn", "res://scenes/player.tscn", "res://Tilesets/Grassy.tscn")
-current_scene="res://testing.tscn"
+current_scene="res://Tilesets/Grassy.tscn"
 center_split_offset=-275
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
