--- a/GameJam-2/.godot/editor/script_editor_cache.cfg
+++ b/GameJam-2/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,25 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 10.0,
+"row": 23,
+"scroll_position": 47.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Altar.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 48,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 26,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
