--- a/GameJam-2/export_presets.cfg
+++ b/GameJam-2/export_presets.cfg
@@ -9,7 +9,7 @@ export_filter="scenes"
 export_files=PackedStringArray("res://main.tscn")
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="./index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
