--- a/GameJam-2/.godot/global_script_class_cache.cfg
+++ b/GameJam-2/.godot/global_script_class_cache.cfg
@@ -4,4 +4,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://assets/character/scripts/character.gd"
+}, {
+"base": &"State",
+"class": &"State_Idle",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/character/scripts/state_idle.gd"
 }])
