attached scripts for state machine

--- a/GameJam-2/.godot/global_script_class_cache.cfg
+++ b/GameJam-2/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://assets/character/scripts/character.gd"
 }, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/character/scripts/state.gd"
+}, {
 "base": &"State",
 "class": &"State_Idle",
 "icon": "",
