changed character sprite sheet

--- a/GameJam-2/.godot/global_script_class_cache.cfg
+++ b/GameJam-2/.godot/global_script_class_cache.cfg
@@ -16,4 +16,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://assets/character/scripts/state_idle.gd"
+}, {
+"base": &"State",
+"class": &"State_Walk",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/character/scripts/state_walk.gd"
 }])
