--- a/GameJam-2/.godot/editor/editor_layout.cfg
+++ b/GameJam-2/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/character/scripts/state_idle.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tilesets/", "res://scenes/", "res://assets/", "res://assets/character/", "res://assets/character/scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/character/scripts/state_walk.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/character/", "res://assets/character/scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -32,11 +32,11 @@ current_scene="res://scenes/player.tscn"
 center_split_offset=-219
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://Altar.gd", "res://assets/character/scripts/character.gd", "res://assets/character/scripts/player_state_machine.gd", "res://assets/character/scripts/state.gd", "res://assets/character/scripts/state_idle.gd"]
+open_scripts=["res://Altar.gd", "res://assets/character/scripts/character.gd", "res://assets/character/scripts/player_state_machine.gd", "res://assets/character/scripts/state.gd", "res://assets/character/scripts/state_idle.gd", "res://assets/character/scripts/state_walk.gd"]
 selected_script="res://assets/character/scripts/state_idle.gd"
 open_help=["Node"]
 script_split_offset=52
