added anims for directions

--- a/GameJam-2/.godot/global_script_class_cache.cfg
+++ b/GameJam-2/.godot/global_script_class_cache.cfg
@@ -1,9 +1,21 @@
 list=Array[Dictionary]([{
+"base": &"Node",
+"class": &"HitBox",
+"icon": "",
+"language": &"GDScript",
+"path": "res://General Nodes/Hitbox/hit_box.gd"
+}, {
 "base": &"CharacterBody2D",
 "class": &"Player",
 "icon": "",
 "language": &"GDScript",
 "path": "res://assets/character/scripts/character.gd"
+}, {
+"base": &"Node",
+"class": &"PlayerStateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/character/scripts/player_state_machine.gd"
 }, {
 "base": &"Node",
 "class": &"State",
