added attack state

--- a/GameJam-2/.godot/global_script_class_cache.cfg
+++ b/GameJam-2/.godot/global_script_class_cache.cfg
@@ -24,6 +24,12 @@ list=Array[Dictionary]([{
 "path": "res://assets/character/scripts/state.gd"
 }, {
 "base": &"State",
+"class": &"State_Attack",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/character/scripts/state_attack.gd"
+}, {
+"base": &"State",
 "class": &"State_Idle",
 "icon": "",
 "language": &"GDScript",
