--- a/GameJam-2/.godot/editor/editor_layout.cfg
+++ b/GameJam-2/.godot/editor/editor_layout.cfg
@@ -12,7 +12,7 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=165
+dock_hsplit_2=250
 dock_hsplit_3=-307
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://assets/character/scripts/state_attack.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://General Nodes/", "res://General Nodes/Hitbox/", "res://assets/", "res://assets/character/", "res://assets/character/scripts/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://General Nodes/Hitbox/", "res://assets/", "res://assets/character/", "res://assets/character/scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://testing.tscn", "res://main.tscn", "res://scenes/player.tscn", "res://Tilesets/Grassy.tscn", "res://General Nodes/Hitbox/HitBox.tscn")
-current_scene="res://scenes/player.tscn"
+current_scene="res://main.tscn"
 center_split_offset=-219
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Altar.gd", "res://assets/character/scripts/character.gd", "res://General Nodes/Hitbox/hit_box.gd", "res://assets/character/scripts/player_state_machine.gd", "res://assets/character/scripts/state.gd", "res://assets/character/scripts/state_attack.gd", "res://assets/character/scripts/state_idle.gd", "res://assets/character/scripts/state_walk.gd"]
-selected_script="res://assets/character/scripts/state_attack.gd"
+selected_script="res://assets/character/scripts/character.gd"
 open_help=["Node"]
 script_split_offset=52
 list_split_offset=0
