played hit and hurt boxes

--- a/GameJam-2/.godot/global_script_class_cache.cfg
+++ b/GameJam-2/.godot/global_script_class_cache.cfg
@@ -1,9 +1,21 @@
 list=Array[Dictionary]([{
-"base": &"Node",
+"base": &"Node2D",
+"class": &"Bush",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Props/Plants/bush.gd"
+}, {
+"base": &"Area2D",
 "class": &"HitBox",
 "icon": "",
 "language": &"GDScript",
 "path": "res://General Nodes/Hitbox/hit_box.gd"
+}, {
+"base": &"Area2D",
+"class": &"HurtBox",
+"icon": "",
+"language": &"GDScript",
+"path": "res://General Nodes/HurtBox/Hurt_box.gd"
 }, {
 "base": &"CharacterBody2D",
 "class": &"Player",
