--- a/GameJam-2/.godot/global_script_class_cache.cfg
+++ b/GameJam-2/.godot/global_script_class_cache.cfg
@@ -23,6 +23,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://assets/character/scripts/character.gd"
 }, {
+"base": &"Node2D",
+"class": &"PlayerInteractionsHandler",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/character/scripts/PlayerInteractionsHandler.gd"
+}, {
 "base": &"Node",
 "class": &"PlayerStateMachine",
 "icon": "",
