--- a/GameJam-2/.godot/editor/editor_layout.cfg
+++ b/GameJam-2/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Tilesets/Grassy.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tilesets/", "res://Props/", "res://Props/Plants/", "res://General Nodes/Hitbox/", "res://assets/", "res://assets/character/", "res://assets/character/scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://enemies/slime/slimesheet.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tilesets/", "res://scenes/", "res://Props/", "res://Props/Plants/", "res://General Nodes/Hitbox/", "res://enemies/", "res://enemies/slime/", "res://assets/character/scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://testing.tscn", "res://main.tscn", "res://scenes/player.tscn", "res://Tilesets/Grassy.tscn", "res://General Nodes/Hitbox/HitBox.tscn", "res://General Nodes/HurtBox/Hurt_box.tscn", "res://Props/Plants/bush.tscn")
-current_scene="res://scenes/player.tscn"
+open_scenes=PackedStringArray("res://testing.tscn", "res://main.tscn", "res://scenes/player.tscn", "res://Tilesets/Grassy.tscn", "res://General Nodes/Hitbox/HitBox.tscn", "res://General Nodes/HurtBox/Hurt_box.tscn", "res://Props/Plants/bush.tscn", "res://enemies/slime/slime.tscn")
+current_scene="res://enemies/slime/slime.tscn"
 center_split_offset=-219
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
