--- a/GameJam-2/.godot/editor/script_editor_cache.cfg
+++ b/GameJam-2/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 70,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
-"scroll_position": 23.0,
-"selection": false,
+"row": 26,
+"scroll_position": 40.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 26,
+"selection_to_column": 12,
+"selection_to_line": 39,
 "syntax_highlighter": "GDScript"
 }
 
@@ -138,6 +142,20 @@ state={
 "h_scroll_position": 0,
 "row": 5,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://enemies/scripts/enemy.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 54,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 32,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
