--- a/GameJam-2/.godot/global_script_class_cache.cfg
+++ b/GameJam-2/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Props/Plants/bush.gd"
 }, {
+"base": &"CharacterBody2D",
+"class": &"Enemy",
+"icon": "",
+"language": &"GDScript",
+"path": "res://enemies/scripts/enemy.gd"
+}, {
 "base": &"Area2D",
 "class": &"HitBox",
 "icon": "",
