--- a/GameJam-2/.godot/editor/editor_layout.cfg
+++ b/GameJam-2/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://enemies/slime/slime.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tilesets/", "res://scenes/", "res://Props/", "res://Props/Plants/", "res://General Nodes/Hitbox/", "res://enemies/", "res://enemies/slime/", "res://enemies/scripts/", "res://assets/character/scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://enemies/scripts/states/enemy_state_idle.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tilesets/", "res://scenes/", "res://Props/", "res://Props/Plants/", "res://GLOBAL/", "res://General Nodes/Hitbox/", "res://enemies/", "res://enemies/slime/", "res://enemies/scripts/", "res://enemies/scripts/states/", "res://assets/character/scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Props/Plants/bush.gd", "res://assets/character/scripts/character.gd", "res://enemies/scripts/enemy.gd", "res://General Nodes/Hitbox/hit_box.gd", "res://General Nodes/HurtBox/Hurt_box.gd", "res://assets/character/scripts/PlayerInteractionsHandler.gd", "res://assets/character/scripts/player_state_machine.gd", "res://assets/character/scripts/state.gd", "res://assets/character/scripts/state_attack.gd", "res://assets/character/scripts/state_idle.gd", "res://assets/character/scripts/state_walk.gd"]
-selected_script="res://enemies/scripts/enemy.gd"
+open_scripts=["res://Props/Plants/bush.gd", "res://assets/character/scripts/character.gd", "res://enemies/scripts/enemy.gd", "res://enemies/scripts/states/enemy_state.gd", "res://enemies/scripts/states/enemy_state_idle.gd", "res://enemies/scripts/enemy_state_machine.gd", "res://GLOBAL/global_player_manager.gd", "res://General Nodes/Hitbox/hit_box.gd", "res://General Nodes/HurtBox/Hurt_box.gd", "res://assets/character/scripts/PlayerInteractionsHandler.gd", "res://assets/character/scripts/player_state_machine.gd", "res://assets/character/scripts/state.gd", "res://assets/character/scripts/state_attack.gd", "res://assets/character/scripts/state_idle.gd", "res://assets/character/scripts/state_walk.gd"]
+selected_script="res://enemies/scripts/states/enemy_state_idle.gd"
 open_help=["Node"]
 script_split_offset=52
 list_split_offset=-1
