--- a/GameJam-2/.godot/global_script_class_cache.cfg
+++ b/GameJam-2/.godot/global_script_class_cache.cfg
@@ -11,6 +11,24 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://enemies/scripts/enemy.gd"
 }, {
+"base": &"Node",
+"class": &"EnemyState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://enemies/scripts/states/enemy_state.gd"
+}, {
+"base": &"EnemyState",
+"class": &"EnemyStateIdle",
+"icon": "",
+"language": &"GDScript",
+"path": "res://enemies/scripts/states/enemy_state_idle.gd"
+}, {
+"base": &"Node",
+"class": &"EnemyStateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://enemies/scripts/enemy_state_machine.gd"
+}, {
 "base": &"Area2D",
 "class": &"HitBox",
 "icon": "",
